compiler-core/src/erlang/snapshots/gleam_core__erlang__tests__negation_block.snap
---
source: compiler-core/src/erlang/tests.rs
expression: "pub fn negate(x) {\n  !{\n    123\n    x\n  }\n}"
---
----- SOURCE CODE
pub fn negate(x) {
  !{
    123
    x
  }
}

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([negate/1]).

-spec negate(boolean()) -> boolean().
negate(X) ->
    not begin
        123,
        X
    end.
