compiler-core/src/erlang/snapshots/gleam_core__erlang__tests__numbers_with_underscores-2.snap
---
source: compiler-core/src/erlang/tests.rs
expression: "\nconst i = 100_000\nconst f = 100_000.00101\npub fn main() {\n  i\n  f\n}\n"

---
-module(the_app).
-compile(no_auto_import).

-export([main/0]).

-spec main() -> float().
main() ->
    100000,
    100000.00101.

