compiler-core/src/erlang/snapshots/gleam_core__erlang__tests__numbers_with_underscores.snap
---
source: compiler-core/src/erlang/tests.rs
expression: "\npub fn main() {\n  100_000\n  100_000.00101\n}\n"

---
-module(the_app).
-compile(no_auto_import).

-export([main/0]).

-spec main() -> float().
main() ->
    100000,
    100000.00101.

