compiler-core/src/erlang/snapshots/gleam_core__erlang__tests__only_guards.snap
---
source: compiler-core/src/erlang/tests.rs
expression: "\npub const string_value = \"constant value\"\n\npub fn main(arg) {\n  case arg {\n    _ if arg == string_value -> 1\n    _ -> 0\n  }\n}\n"

---
-module(the_app).
-compile(no_auto_import).

-export([main/1]).

-spec main(binary()) -> integer().
main(Arg) ->
    case Arg of
        _@1 when Arg =:= <<"constant value"/utf8>> ->
            1;

        _@2 ->
            0
    end.

