compiler-core/src/erlang/snapshots/gleam_core__erlang__tests__pattern_as.snap
---
source: compiler-core/src/erlang/tests.rs
expression: "pub fn a(x) {\n  case x {\n    Ok(1 as y) -> 1\n    _ -> 0\n  }\n}"

---
-module(the_app).
-compile(no_auto_import).

-export([a/1]).

-spec a({ok, integer()} | {error, any()}) -> integer().
a(X) ->
    case X of
        {ok, 1 = Y} ->
            1;

        _@1 ->
            0
    end.

