compiler-core/src/erlang/snapshots/gleam_core__erlang__tests__pipe_in_eq.snap
---
source: compiler-core/src/erlang/tests.rs
expression: "fn id(x) {\n  x\n}\n        \npub fn main() {\n    1 == 1 |> id\n}"

---
-module(the_app).
-compile(no_auto_import).

-export([main/0]).

-spec id(A) -> A.
id(X) ->
    X.

-spec main() -> boolean().
main() ->
    1 =:= begin
        _pipe = 1,
        id(_pipe)
    end.

